add more constraints on the diff function

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,6 +1,9 @@
 set(TFEL_MATH_ENZYME_HEADERS
     TFEL/Math/Enzyme/diff.hxx
-    TFEL/Math/Enzyme/diff.ixx)
+    TFEL/Math/Enzyme/diff.ixx
+    TFEL/Math/Enzyme/Internals/IsTemporary.hxx)
 
-install(FILES ${TFEL_MATH_ENZYME_HEADERS}
-        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/TFEL/Math/Enzyme)
+foreach(file ${TFEL_MATH_ENZYME_HEADERS})
+  get_filename_component(dir ${file} DIRECTORY)
+  install(FILES ${file} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${dir} )
+endforeach()
