--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(TFELMathEnzyme INTERFACE)
 target_include_directories(TFELMathEnzyme
-    INTERFACE 
-        $<BUILD_INTERFACE:${PROJECT_INCLUDE_DIR}>
+    INTERFACE
+        $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
