--- a/test-suite/test1/Makefile
+++ b/test-suite/test1/Makefile
@@ -10,8 +10,8 @@ all: test.exe
 
 test.exe: test.cxx
 	echo $(LDFLAGS)
-	clang++-17 $(CPPFLAGS) test.cxx -S -emit-llvm -o input.ll $(CXXFLAGS1)
-	opt-17 input.ll $(CXXFLAGS1) -p enzyme -o output.ll -S
+	clang++-17 $(CPPFLAGS) $(CXXFLAGS1) test.cxx -S -emit-llvm -o input.ll $(CXXFLAGS1)
+	opt-17 input.ll $(OPTFLAGS) --passes=enzyme  -o output.ll -S
 	opt-17 output.ll $(CXXFLAGS2) -o output_opt.ll -S
 	clang++-17 output_opt.ll -o test.exe $(LDFLAGS)
 
