--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,6 +1,8 @@
 set(TFEL_MATH_ENZYME_HEADERS
     TFEL/Math/Enzyme/diff.hxx
     TFEL/Math/Enzyme/diff.ixx
+    TFEL/Math/Enzyme/Variable.hxx
+    TFEL/Math/Enzyme/Internals/Enzyme.hxx)
     TFEL/Math/Enzyme/Internals/IsTemporary.hxx)
 
 foreach(file ${TFEL_MATH_ENZYME_HEADERS})
