reset to a179da93b236ab793921e615351c6ebfe8541224

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -2,12 +2,8 @@ set(TFEL_MATH_ENZYME_HEADERS
     TFEL/Math/Enzyme/diff.hxx
     TFEL/Math/Enzyme/diff.ixx
     TFEL/Math/Enzyme/Variable.hxx
-    TFEL/Math/Enzyme/GetPartialDerivative.hxx
-    TFEL/Math/Enzyme/GetPartialDerivative.ixx
     TFEL/Math/Enzyme/Internals/Enzyme.hxx
-    TFEL/Math/Enzyme/Internals/IsTemporary.hxx
-    TFEL/Math/Enzyme/Internals/CallEnzymeForwardDifferentiate.hxx
-    TFEL/Math/Enzyme/Internals/CallEnzymeForwardDifferentiate.ixx)
+    TFEL/Math/Enzyme/Internals/IsTemporary.hxx)
 
 foreach(file ${TFEL_MATH_ENZYME_HEADERS})
   get_filename_component(dir ${file} DIRECTORY)
