First implementation of the computeGradient functions for reverse mode AD

--- a/test-suite/test2/Makefile
+++ b/test-suite/test2/Makefile
@@ -1,5 +1,5 @@
 CPPFLAGS=-std=c++20 $(shell tfel-config --includes) -I /home/th202608/codes/tfel-math-enzyme/master/src/TFELMathEnzyme/include
-CXXFLAGS1=-O2 -fno-vectorize -fno-slp-vectorize -fno-unroll-loops
+CXXFLAGS1= -fno-vectorize -fno-slp-vectorize -fno-unroll-loops
 CXXFLAGS2=-O3
 OPTFLAGS=-load-pass-plugin=/home/th202608/codes/enzyme/master/install-llvm-18.1.8/lib/LLVMEnzyme-18.so
 LDFLAGS=$(shell tfel-config --libs --math --tests) -lstdc++ -lm
