rename computeGradient in computeReverseModeGradient

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,5 +5,5 @@ function(add_tfel_math_enzyme_test name)
 endfunction()
 
 add_tfel_math_enzyme_test(fwddiff)
-add_tfel_math_enzyme_test(computeGradient)
+add_tfel_math_enzyme_test(computeReverseModeGradient)
 add_tfel_math_enzyme_test(getForwardModeGradientFunction)
