implement the getGradientFunction and add tests. Code clean-up

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,3 +7,4 @@ endfunction()
 add_tfel_math_enzyme_test(fwddiff)
 add_tfel_math_enzyme_test(computeReverseModeGradient)
 add_tfel_math_enzyme_test(getForwardModeGradientFunction)
+add_tfel_math_enzyme_test(getGradientFunction)
