Change Gradient in Derivative

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,6 @@ function(add_tfel_math_enzyme_test name)
 endfunction()
 
 add_tfel_math_enzyme_test(fwddiff)
-add_tfel_math_enzyme_test(computeReverseModeGradient)
-add_tfel_math_enzyme_test(getForwardModeGradientFunction)
-add_tfel_math_enzyme_test(getGradientFunction)
+add_tfel_math_enzyme_test(computeReverseModeDerivative)
+add_tfel_math_enzyme_test(getForwardModeDerivativeFunction)
+add_tfel_math_enzyme_test(getDerivativeFunction)
