yet another CI test

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -27,16 +27,19 @@ jobs:
         wget https://apt.llvm.org/llvm.sh
         chmod +x llvm.sh
         sudo ./llvm.sh 18
-        spack external find llvm
         spack compiler find
-        sed -i 's|prefix: /usr|prefix: /usr/lib/llvm-18/|g' /home/runner/work/TFELMathEnzyme/TFELMathEnzyme/spack/etc/spack/packages.yaml
-        spack install enzyme%clang@18.1.8
-        spack install tfel@master~python~python_bindings~aster~fortran~abaqus~calculix~ansys~europlexus~cyrano~lsdyna~comsol~diana-fea%clang@18.1.8
+        git clone https://github.com/EnzymeAD/Enzyme
+	mkdir build-enzyme
+	cd build-enzyme
+	cmake ../Enzyme/enzyme -DLLVM_DIR=/usr/lib/llvm-18 -DCMAKE_BUID_TYPE=Release -DCMAKE_INSTALL_PREFIX=${{github.workspace}}/enzyme
+	make
+	make install
+        spack install tfel@master%clang@18.1.8~python~python_bindings~aster~fortran~abaqus~calculix~ansys~europlexus~cyrano~lsdyna~comsol~diana-fea
     - name: cmake
       shell: spack-sh {0}
       run: |
         spack load tfel enzyme
-        cmake -DCMAKE_BUILD_TYPE=Release . -DTFEL_DIR=`spack location -i tfel` -DEnzyme_DIR=`spack location -i enzyme`
+        cmake -DCMAKE_BUILD_TYPE=Release . -DTFEL_DIR=`spack location -i tfel` -DEnzyme_DIR=${{github.workspace}}/enzyme
     - name: make
       shell: spack-sh {0}
       run: |
