--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -36,20 +36,19 @@ jobs:
         make
         make install
         cat /home/runner/work/TFELMathEnzyme/TFELMathEnzyme/enzyme/lib/cmake/Enzyme/EnzymeTargets.cmake
-        cmake --version
-    #     spack install tfel@master%clang@18.1.8~python~python_bindings~aster~fortran~abaqus~calculix~ansys~europlexus~cyrano~lsdyna~comsol~diana-fea
-    # - name: cmake
-    #   shell: spack-sh {0}
-    #   run: |
-    #     spack load tfel
-    #     cmake -DCMAKE_BUILD_TYPE=Release . -DTFEL_DIR=`spack location -i tfel` -DEnzyme_DIR=${{github.workspace}}/enzyme
-    # - name: make
-    #   shell: spack-sh {0}
-    #   run: |
-    #     spack load tfel
-    #     make
-    # - name: ctest
-    #   shell: spack-sh {0}
-    #   run: |
-    #     spack load tfel
-    #     ctest
+        spack install tfel@master%clang@18.1.8~python~python_bindings~aster~fortran~abaqus~calculix~ansys~europlexus~cyrano~lsdyna~comsol~diana-fea
+    - name: cmake
+      shell: spack-sh {0}
+      run: |
+        spack load tfel
+        /usr/bin/cmake -DCMAKE_BUILD_TYPE=Release . -DTFEL_DIR=`spack location -i tfel` -DEnzyme_DIR=${{github.workspace}}/enzyme
+    - name: make
+      shell: spack-sh {0}
+      run: |
+        spack load tfel
+        make
+    - name: ctest
+      shell: spack-sh {0}
+      run: |
+        spack load tfel
+        ctest
