--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -24,31 +24,33 @@ jobs:
     - name: Install TFEL and Enzyme
       shell: spack-sh {0}
       run: |
-        wget https://apt.llvm.org/llvm.sh
-        chmod +x llvm.sh
-        sudo ./llvm.sh 18
-        spack compiler find
-        spack compiler list
-        git clone https://github.com/EnzymeAD/Enzyme
-        mkdir build-enzyme
-        cd build-enzyme
-        cmake ../Enzyme/enzyme -DLLVM_DIR=/usr/lib/llvm-18 -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=${{github.workspace}}/enzyme
-        make
-        make install
-        cat /home/runner/work/TFELMathEnzyme/TFELMathEnzyme/enzyme/lib/cmake/Enzyme/EnzymeTargets.cmake
-        spack install tfel@master%clang@18.1.8~python~python_bindings~aster~fortran~abaqus~calculix~ansys~europlexus~cyrano~lsdyna~comsol~diana-fea
-    - name: cmake
-      shell: spack-sh {0}
-      run: |
-        spack load tfel
-        /usr/bin/cmake -DCMAKE_BUILD_TYPE=Release . -DTFEL_DIR=`spack location -i tfel` -DEnzyme_DIR=${{github.workspace}}/enzyme
-    - name: make
-      shell: spack-sh {0}
-      run: |
-        spack load tfel
-        make
-    - name: ctest
-      shell: spack-sh {0}
-      run: |
-        spack load tfel
-        ctest
+      	apt install cmake
+        which cmake
+    #     wget https://apt.llvm.org/llvm.sh
+    #     chmod +x llvm.sh
+    #     sudo ./llvm.sh 18
+    #     spack compiler find
+    #     spack compiler list
+    #     git clone https://github.com/EnzymeAD/Enzyme
+    #     mkdir build-enzyme
+    #     cd build-enzyme
+    #     cmake ../Enzyme/enzyme -DLLVM_DIR=/usr/lib/llvm-18 -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=${{github.workspace}}/enzyme
+    #     make
+    #     make install
+    #     cat /home/runner/work/TFELMathEnzyme/TFELMathEnzyme/enzyme/lib/cmake/Enzyme/EnzymeTargets.cmake
+    #     spack install tfel@master%clang@18.1.8~python~python_bindings~aster~fortran~abaqus~calculix~ansys~europlexus~cyrano~lsdyna~comsol~diana-fea
+    # - name: cmake
+    #   shell: spack-sh {0}
+    #   run: |
+    #     spack load tfel
+    #     /usr/bin/cmake -DCMAKE_BUILD_TYPE=Release . -DTFEL_DIR=`spack location -i tfel` -DEnzyme_DIR=${{github.workspace}}/enzyme
+    # - name: make
+    #   shell: spack-sh {0}
+    #   run: |
+    #     spack load tfel
+    #     make
+    # - name: ctest
+    #   shell: spack-sh {0}
+    #   run: |
+    #     spack load tfel
+    #     ctest
