--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         sudo apt install cmake
         which cmake
+        ls /usr/bin/cmake
     #     wget https://apt.llvm.org/llvm.sh
     #     chmod +x llvm.sh
     #     sudo ./llvm.sh 18
