--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -41,7 +41,7 @@ jobs:
       shell: spack-sh {0}
       run: |
         spack load tfel
-        cmake -DCMAKE_BUILD_TYPE=Release . -DTFEL_DIR=`spack location -i tfel` -DEnzyme_DIR=${{github.workspace}}/enzyme
+        cmake -DCMAKE_BUILD_TYPE=Release . -DTFEL_DIR=`spack location -i tfel` -DEnzyme_DIR=${{github.workspace}}/enzyme -DTFEL_MATH_ENZYME_ENZYME_FLAGS="-fplugin=${{github.workspace}}/enzyme/lib/ClangEnzyme-18.so"
     - name: make       
       shell: spack-sh {0}
       run: |
